Troubleshooting api & incompatibilities between layers and inside db structure
